Import of NCLEATON/File-Transaction-Atomic-0.02 from CPAN.
gitpan-cpan-distribution: File-Transaction-Atomic
gitpan-cpan-version:      0.02
gitpan-cpan-path:         NCLEATON/File-Transaction-Atomic-0.02.tar.gz
gitpan-cpan-author:       NCLEATON
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
 
 0.01  19 Sep 2002  Initial release.
 
+0.02               Removed dependence on core modules Cwd and DirHandle.
+                   Fixed POD typo.
+                   More resilient #! lines for taint mode tests.
+
