--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 
 0.01  19 Sep 2002  Initial release.
 
-0.02               Removed dependence on core modules Cwd and DirHandle.
+0.02  13 Mar 2003  Removed dependence on core modules Cwd and DirHandle.
                    Fixed POD typo.
                    More resilient #! lines for taint mode tests.
+
+0.03  13 Mar 2003  Typo in Changes file.
 
