--- a/README
+++ b/README
@@ -302,7 +302,7 @@ AUTHOR
     Nick Cleaton <nick@cleaton.net>
 
 COPYRIGHT
-    Copyright (C) 2002 Nick Cleaton. All Rights Reserved.
+    Copyright (C) 2002-2003 Nick Cleaton. All Rights Reserved.
 
     This module is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
